--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,39 @@
 alembic==0.8.10
 appdirs==1.4.0
+bleach==1.5.0
 blinker==1.4
 click==6.7
 dominate==2.3.1
 Flask==0.12
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.2
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.3
 Flask-Moment==0.5.1
+Flask-PageDown==0.2.2
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
+ForgeryPy==0.1
+get==0.0.0
+html5lib==0.9999999
 itsdangerous==0.24
 Jinja2==2.9.5
 Mako==1.0.6
+Markdown==2.6.8
 MarkupSafe==0.23
 mysql-connector==2.1.4
 mysqlclient==1.3.9
 packaging==16.8
+post==0.0.0
+public==0.0.0
 PyMySQL==0.7.9
 pyparsing==2.1.10
 python-editor==1.0.3
+query-string==0.0.0
+request==0.0.0
+setupfiles==0.0.0
 six==1.10.0
 SQLAlchemy==1.1.5
 visitor==0.1.3
